--- a/pppppp/Base.lproj/Main.storyboard
+++ b/pppppp/Base.lproj/Main.storyboard
@@ -297,21 +297,39 @@
                                 <fontDescription key="fontDescription" type="system" pointSize="16"/>
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
+                            <button opaque="NO" alpha="0.64999997615814209" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Hum-JV-3Bc">
+                                <rect key="frame" x="110" y="553" width="194" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="30" id="Am6-69-ZJG"/>
+                                    <constraint firstAttribute="height" constant="30" id="haB-mE-OwU"/>
+                                    <constraint firstAttribute="width" constant="194" id="xM6-wY-smD"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="24"/>
+                                <state key="normal" title="CreateAccount">
+                                    <color key="titleColor" red="0.99215686270000003" green="0.99215686270000003" blue="0.99215686270000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                </state>
+                                <connections>
+                                    <segue destination="JTg-Ot-WFO" kind="presentation" modalPresentationStyle="fullScreen" id="CiU-be-7cY"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="1i7-hV-xEw"/>
                         <color key="backgroundColor" red="0.070588235289999995" green="0.0" blue="0.29803921570000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
                             <constraint firstItem="OPc-6w-uNu" firstAttribute="centerX" secondItem="0AS-tW-eyr" secondAttribute="centerX" id="9Wa-hH-zrc"/>
+                            <constraint firstItem="Hum-JV-3Bc" firstAttribute="centerX" secondItem="0AS-tW-eyr" secondAttribute="centerX" id="BQL-cS-R1x"/>
                             <constraint firstItem="WaZ-TG-ZSF" firstAttribute="centerX" secondItem="0AS-tW-eyr" secondAttribute="centerX" id="J9c-Ja-hrs"/>
                             <constraint firstItem="rpp-2C-UAa" firstAttribute="top" secondItem="WaZ-TG-ZSF" secondAttribute="bottom" constant="60" id="KQS-ms-O0U"/>
                             <constraint firstItem="OPc-6w-uNu" firstAttribute="top" secondItem="Deh-rw-zcP" secondAttribute="bottom" constant="70" id="KqO-CO-RNu"/>
                             <constraint firstItem="Deh-rw-zcP" firstAttribute="centerX" secondItem="0AS-tW-eyr" secondAttribute="centerX" constant="-100" id="WI5-q6-e1Q"/>
                             <constraint firstItem="Deh-rw-zcP" firstAttribute="top" secondItem="1i7-hV-xEw" secondAttribute="top" constant="100" id="YYJ-37-UHH"/>
+                            <constraint firstItem="Hum-JV-3Bc" firstAttribute="top" secondItem="rpp-2C-UAa" secondAttribute="bottom" constant="30" id="ZwI-nT-ULW"/>
                             <constraint firstItem="rpp-2C-UAa" firstAttribute="centerX" secondItem="0AS-tW-eyr" secondAttribute="centerX" id="laG-TE-i7A"/>
                             <constraint firstItem="WaZ-TG-ZSF" firstAttribute="top" secondItem="OPc-6w-uNu" secondAttribute="bottom" constant="60" id="ruB-x0-MX7"/>
                         </constraints>
                     </view>
                     <connections>
+                        <outlet property="LoginButton" destination="Hum-JV-3Bc" id="Cib-dU-wEP"/>
                         <outlet property="emailTextField" destination="OPc-6w-uNu" id="APC-l2-hCv"/>
                         <outlet property="goButton" destination="rpp-2C-UAa" id="SZ0-N6-gKY"/>
                         <outlet property="passwordTextField" destination="WaZ-TG-ZSF" id="PO7-fE-xad"/>
@@ -319,7 +337,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="AxD-Fj-GTE" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-1810" y="-25"/>
+            <point key="canvasLocation" x="-1810.144927536232" y="-25.446428571428569"/>
         </scene>
         <!--Goal View Controller-->
         <scene sceneID="Tjd-xu-yfL">
